# brew

./: .dockerignore  .gitattributes  A.stl  B.stl  CMakeLists.txt  Jet.stl  Plane.stl  README.md
.devcontainer/: Dockerfile  Dockerfile-old  build-dev.bat  build-lightweight.bat  build.bat  devcontainer.json
docker/: Dockerfile  README.md  build-test.sh  build.bat  docker-compose.yml
examples/: CMakeLists.txt  NonCooperativeSpacecraftConfig.yaml  NonCooperativeSpacecraftExample.cpp
include/brew/: assert.hpp  plot.hpp
include/brew/assignment/: gibbs.hpp  hungarian.hpp  murty.hpp
include/brew/clustering/: cc_watershed.hpp  cluster_base.hpp  dbscan.hpp  grid_cc.hpp  mahalanobis_dbscan.hpp  multiscale_watershed.hpp  multithreshold_watershed.hpp  percentile_watershed.hpp  watershed.hpp
include/brew/core/: assert.hpp
include/brew/desktop/: plot.hpp
include/brew/distributions/: base_single_model.hpp  bernoulli.hpp  gaussian.hpp  ggiw.hpp  mixture.hpp  trajectory_base_model.hpp  trajectory_gaussian.hpp  trajectory_ggiw.hpp
include/brew/dynamics/: body_frame_single_integrator.hpp  constant_turn_2d.hpp  continuous_dynamics.hpp  coordinated_turn.hpp  double_integrator.hpp  double_integrator_1d.hpp  double_integrator_2d.hpp  double_integrator_3d.hpp  double_integrator_3d_euler.hpp  dynamics_base.hpp  integrator_1d.hpp  integrator_2d.hpp  integrator_3d.hpp  linear_dynamics.hpp  nonlinear_dynamics.hpp  singer.hpp  single_integrator.hpp
include/brew/filters/: ekf.hpp  filter.hpp  ggiw_ekf.hpp  ggiw_orientation_ekf.hpp  tm_ekf.hpp  trajectory_gaussian_ekf.hpp  trajectory_ggiw_ekf.hpp  trajectory_ggiw_orientation_ekf.hpp  trajectory_tm_ekf.hpp
include/brew/fusion/: cap.hpp  merge.hpp  prune.hpp
include/brew/gaussian/: gaussian.hpp  gaussian_model.hpp  gci.hpp  merge.hpp
include/brew/ggiw/: gci.hpp  ggiw.hpp  ggiw_model.hpp  merge.hpp
include/brew/ggiw_orientation/: gci.hpp  ggiw_orientation.hpp  ggiw_orientation_model.hpp  merge.hpp
include/brew/iggiw/: gci.hpp  iggiw.hpp  iggiw_model.hpp  merge.hpp
include/brew/measurement_sampling/: measurement_sampling.hpp
include/brew/metrics/: ospa.hpp
include/brew/models/: base_single_model.hpp  bernoulli.hpp  gaussian.hpp  ggiw.hpp  ggiw_orientation.hpp  mixture.hpp  template_pose.hpp  trajectory.hpp  trajectory_base_model.hpp  trajectory_gaussian.hpp  trajectory_ggiw.hpp  trajectory_ggiw_orientation.hpp
include/brew/multi_target/: cphd.hpp  elementary_symmetric.hpp  glmb.hpp  jglmb.hpp  lmb.hpp  mb.hpp  mbm.hpp  phd.hpp  pmbm.hpp  rfs_base.hpp
include/brew/plot_utils/: color_palette.hpp  math_utils.hpp  plot_gaussian.hpp  plot_ggiw.hpp  plot_ggiw_orientation.hpp  plot_mixture.hpp  plot_options.hpp  plot_point_cloud.hpp  plot_trajectory_gaussian.hpp  plot_trajectory_ggiw.hpp  plot_trajectory_ggiw_orientation.hpp  plot_utils.hpp
include/brew/serialization/: rfs_json.hpp  rfs_yaml.hpp
include/brew/shared/: base_single_model.hpp  bernoulli.hpp  elementary_symmetric.hpp  filter_base.hpp  filter_traits.hpp  mixture.hpp  rfs_base.hpp  rfs_detail.hpp  trajectory_window.hpp
include/brew/template_matching/: icp_base.hpp  pca_icp.hpp  point_cloud.hpp  point_cloud_io.hpp  point_to_plane_icp.hpp  point_to_point_icp.hpp  so3.hpp  template_library.hpp  tm_icp_runner.hpp
include/brew/template_pose/: gci.hpp  merge.hpp  template_pose.hpp  template_pose_model.hpp
include/brew/trajectory_gaussian/: gci.hpp  merge.hpp  trajectory_gaussian.hpp  trajectory_gaussian_model.hpp
include/brew/trajectory_ggiw/: gci.hpp  merge.hpp  trajectory_ggiw.hpp  trajectory_ggiw_model.hpp
include/brew/trajectory_ggiw_orientation/: gci.hpp  merge.hpp  trajectory_ggiw_orientation.hpp  trajectory_ggiw_orientation_model.hpp
include/brew/trajectory_iggiw/: gci.hpp  merge.hpp  trajectory_iggiw.hpp  trajectory_iggiw_model.hpp
include/brew/trajectory_template_pose/: gci.hpp  merge.hpp  trajectory_template_pose.hpp  trajectory_template_pose_model.hpp
src/brew/: plot.cpp
src/brew/assignment/: CMakeLists.txt
src/brew/clustering/: CMakeLists.txt  cc_watershed.cpp  dbscan.cpp  grid_cc.cpp  mahalanobis_dbscan.cpp  multiscale_watershed.cpp  multithreshold_watershed.cpp  percentile_watershed.cpp  watershed.cpp
src/brew/desktop/: plot.cpp
src/brew/distributions/: CMakeLists.txt
src/brew/dynamics/: CMakeLists.txt  double_integrator_3d_euler.cpp  linear_dynamics.cpp
src/brew/filters/: CMakeLists.txt  ekf.cpp  ggiw_ekf.cpp  ggiw_orientation_ekf.cpp  tm_ekf.cpp  trajectory_gaussian_ekf.cpp  trajectory_ggiw_ekf.cpp  trajectory_ggiw_orientation_ekf.cpp  trajectory_tm_ekf.cpp
src/brew/fusion/: CMakeLists.txt  merge.cpp
src/brew/gaussian/: CMakeLists.txt
src/brew/ggiw/: CMakeLists.txt
src/brew/plot_utils/: CMakeLists.txt  color_palette.cpp  math_utils.cpp  plot_gaussian.cpp  plot_ggiw.cpp  plot_ggiw_orientation.cpp  plot_mixture.cpp  plot_options.cpp  plot_point_cloud.cpp  plot_trajectory_gaussian.cpp  plot_trajectory_ggiw.cpp  plot_trajectory_ggiw_orientation.cpp
src/brew/shared/: CMakeLists.txt
src/brew/shared/fusion/: merge.cpp
src/brew/template_matching/: CMakeLists.txt  pca_icp.cpp  point_cloud_io.cpp  point_to_plane_icp.cpp  point_to_point_icp.cpp
tests/: CMakeLists.txt  GGIWOrientation_test.cpp  GGIWTrajectoryOrientation_test.cpp  GGIWTrajectory_test.cpp  GGIW_test.cpp  GMTrajectory_test.cpp  GM_test.cpp  test_assignment.cpp  test_cphd.cpp  test_cphd_tracking.cpp  test_dbscan.cpp  test_dynamics.cpp  test_eigenrand.cpp  test_ekf.cpp  test_fusion.cpp  test_gaussian.cpp  test_gaussian_concrete.cpp  test_ggiw_ekf.cpp  test_ggiw_orientation.cpp  test_iggiw_ekf.cpp  test_math_utils.cpp  test_mbm.cpp  test_mbm_tracking.cpp  test_mbm_trajectory_tracking.cpp  test_merge.cpp  test_ospa.cpp  test_packages_concrete.cpp  test_phd.cpp  test_phd_tracking.cpp  test_phd_tracking_extra.cpp  test_phd_trajectory_tracking.cpp  test_plot_gaussian.cpp  test_plot_ggiw.cpp  test_plot_mixture.cpp  test_plot_trajectory.cpp  test_pmbm.cpp  test_pmbm_tracking.cpp  test_pmbm_trajectory_tracking.cpp  test_serialization.cpp  test_tm_phd.cpp  (+4 more)
(+240 files in other folders)
